# adk-starter

./: MAINTAINERS.md  README.md  pyproject.toml
.github/workflows/: build-agent.yaml
src/kagenti_adk_agents/: agent.py
